tests/error/struct_errors/invalid_attribute_assign3.err
Error: Type mismatch (at $FILE:15:6)
   | 
13 | @guppy(module)
14 | def foo(s: MyStruct) -> None:
15 |     s.x, a = (1, 2), 3
   |       ^ Cannot assign expression of type `(int, int)` to field `x`
   |         of type `int`

Guppy compilation failed due to 1 previous error
